kubernetes/production/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $CI_ENVIRONMENT_SLUG
  annotations:
    nginx.org/large-client-header-buffers: "4 15k"
  namespace: $KUBE_NAMESPACE
  labels:
    app: $CI_ENVIRONMENT_SLUG
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
spec:
  tls:
  - hosts:
    - $CI_ENVIRONMENT_HOSTNAME
    - www.$CI_ENVIRONMENT_HOSTNAME
    - nodejs.$CI_ENVIRONMENT_HOSTNAME
    - events.$CI_ENVIRONMENT_HOSTNAME
    secretName: ssl
  rules:
  - host: $CI_ENVIRONMENT_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $CI_ENVIRONMENT_SLUG
          servicePort: $PORT
  - host: www.$CI_ENVIRONMENT_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $CI_ENVIRONMENT_SLUG
          servicePort: $PORT
  - host: nodejs.$CI_ENVIRONMENT_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $CI_ENVIRONMENT_SLUG
          servicePort: $PORT
  - host: events.$CI_ENVIRONMENT_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: $CI_ENVIRONMENT_SLUG
          servicePort: $PORT
